--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "node-sass": "^4.11.0",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
-    "react-helmet": "^5.2.0"
+    "react-helmet": "^5.2.0",
+    "react-sticky": "^6.0.3"
   },
   "keywords": [
     "gatsby"
